# billing

./: Cargo.toml  README.md  deny.toml  justfile
.github/workflows/: ci.yml  release.yml
benches/: billing.rs
examples/: cloud_compute.rs  saas_billing.rs  water_utility.rs
src/: advance.rs  aggregation.rs  allocation.rs  amount.rs  currency.rs  document.rs  error.rs  lib.rs  line_item.rs  lookup.rs  minimum.rs  period.rs  quantity.rs  schedule.rs  settlement.rs  tariff.rs  tax.rs  tou.rs  vat.rs
tests/: advance_payments.rs  audit_regressions.rs  financial_correctness.rs  invoice_compliance.rs  properties.rs
